--- a/style.css
+++ b/style.css
@@ -6,6 +6,17 @@
   box-sizing: border-box;
 }
 
+:root {
+  scroll-behavior: smooth;
+  --size-300: 0.75rem;
+  --size-400: 1rem;
+  --size-500: 1.33rem;
+  --size-600: 1.77rem;
+  --size-700: 2.36rem;
+  --size-800: 3.15rem;
+  --size-900: 4.2rem;
+}
+
 html {
   display: block;
   height: -webkit-fill-available;
@@ -14,6 +25,7 @@ html {
 }
 
 body {
+  display: block;
   margin: 0;
   background-color: rgb(30, 30, 36);
 }
