--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ html {
 }
 
 body {
+  line-height: 1.5;
   display: block;
   margin: 0;
   background-color: rgb(30, 30, 36);
@@ -37,7 +38,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   margin-top: 100px;
-  font-size: 18px;
+  font-size: 1.05rem;
 }
 
 a {
